# sfhir

./: .devcontainer.json  .envrc  .gitignore  .gitpod.yaml  Cargo.toml  LICENSE  README.md  devenv.nix  devenv.yaml  flake.nix  rustfmt.toml
.devcontainer/: devcontainer.json
.gitpod/: Dockerfile
rust/codegen/: Cargo.toml
rust/codegen/src/: ir.rs  json_schema.rs  main.rs  schema.rs
rust/fhir/: Cargo.toml
rust/fhir/src/: lib.rs
