[workspace]
resolver = "2"
members = [
    "rust/codegen",
    # "rust/fhir",
]

[workspace.dependencies]

[workspace.dependencies.anyhow]
version = "1.0"

[workspace.dependencies.serde]
version = "1.0"
features = ["derive"]

[workspace.dependencies.serde_json]
version = "1.0"

[workspace.dependencies.lazy_static]
version = "1.5"
