[package]
name = "codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace=true
serde.workspace=true
serde_json.workspace=true
clap = { version = "4.0", features = ["derive"] }
convert_case = "0.6"
textwrap = "0.16.0"
